src/semantic/tests/data/negative/invalid-assignment-2.hsh
function hello()
  self = 2
end
